--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ color: #ffffff; }
 2 Banner
 -----------------------------------------------------------------------*/
 .banner { position: relative; background: #f5f5f5; }
+.banner-rounded-circle{border-radius:5%!important}
 .banner .banner-text { padding:240px 0 120px 0; letter-spacing: 1px; }
 .video-btn{width: 70px; height:70px; border-radius: 90px; line-height: 70px; display: inline-block; position: absolute; border: 2px solid #ffffff; text-align: center;top: 50%;
     left: 50%;
